# boto3_paginator

./: .drone.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: boto3_paginator.py
tests/fixtures/: boto3_responses.py
tests/integration/: conftest.py  test_slurp_items.py
tests/unit/: ec2_responses.py  s3_responses.py  test_slurp_items.py
