[tool.poetry]
name = "boto3_paginator"
version = "0.1.0"
description = "Wrapper around boto3's pagination functionality."

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
boto3 = "^1.34.69"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--cov=src", "--cov-report=term-missing"]
